...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_button" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>
...
